--- a/redactor/static/redactor/css/django_admin.css
+++ b/redactor/static/redactor/css/django_admin.css
@@ -2,4 +2,4 @@
 .redactor_box textarea, .redactor_box iframe { min-height: 300px; }
 
 #redactor_tabs { padding-left: 0; }
-#redactor_tabs li { list-style: none; }
+#redactor_tabs li, ul.redactor_toolbar li { list-style-type: none; display: inline; }
