--- a/redator/static/admin/redator.css
+++ b/redator/static/admin/redator.css
@@ -1,5 +1,10 @@
-.redactor_box { display: inline-block; min-width: 750px; }
-.redactor_box textarea, .redactor_box iframe { min-height: 300px; }
+.redactor_box { float: left; width: 52em; }
 
-#redactor_tabs { padding-left: 0; }
-#redactor_tabs li, ul.redactor_toolbar li { list-style-type: none; display: inline; }
+form .aligned .redactor_box p, form .aligned .redactor_box ul {
+    margin: 0;
+    padding: 2px 3px;
+}
+
+.redactor_modal_btn {
+    padding: 6px 16px 5px 16px !important;
+}
