Increase the height of textarea by widget attributes

--- a/redator/static/admin/redator.css
+++ b/redator/static/admin/redator.css
@@ -1,4 +1,4 @@
-.redactor_box { float: left; width: 52em; }
+.redactor_box { float: left; }
 
 form .aligned .redactor_box p, form .aligned .redactor_box ul {
     margin: 0;
